# goit-algo2-hw-02

./: README.md  pyproject.toml
src/: task_1.py  task_2.py
